--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ highlighter: pygments
 title : Jekyll Bootstrap
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
+  name : Chen Zixin
+  email : 84856@163.com
+  github : chenzixin
+  twitter : chenzixin
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
@@ -98,7 +98,7 @@ JB :
   # Set 'provider' to false to turn analytics off globally.
   #        
   analytics :
-    provider : google 
+    provider : false 
     google : 
         tracking_id : 'UA-123-12'
     getclicky :
