--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ _theme_packages/*
 
 assets/img/portfolio/._*
 fav/book/safari/the-plum-in-the-golden-vase/*
+fav/book/safari/md/*
 md/Github.md
 
 Thumbs.db
